Improve test of ZipFileResolver to behave on multiple platforms.